<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/transitionsContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.pnikosis.materialishprogress.ProgressWheel
        android:visibility="gone"
        android:id="@+id/pgLoad"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        app:matProg_barColor="@color/colorPrimary"
        app:matProg_progressIndeterminate="true" />

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/contentAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgError"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:tint="@color/colorAccent"
            app:srcCompat="@drawable/v_error_wifi_off"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/v_error_image_text.title"
            android:id="@+id/tvTitle"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_error_offline_title"
            android:gravity="center"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/v_error_image_text.message"
            android:id="@+id/tvMessage"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v_error_offline_message"
            android:gravity="center"/>

        <android.support.v7.widget.AppCompatButton
            style="@style/v_error_button"
            android:id="@+id/btnRefresh"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/v_error_tentar_nov"/>
    </LinearLayout>

</RelativeLayout>